--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .button {
 	margin-top: 10px;
 	border-radius: 1em;
@@ -24,3 +28,28 @@ body::-webkit-scrollbar-thumb {
   background-color: #008336;
   border-radius: 1em;
 }
+
+.print-friendly {
+	display: block;
+}
+
+.print-only {
+	display: none;
+}
+
+.print-docs {
+	display: block;
+}
+
+  @media print {
+	.print-friendly {
+			display: none !important;
+		}
+	.print-docs {
+		max-width: 95% !important;
+
+	}
+	.print-only {
+		display: block !important;
+	}
+  }
