--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -22,6 +22,29 @@
 	right: 0;
 	margin-right: 4px;
 }
+.subHeaderRight {
+	padding: 25px;
+	border: 2px solid green;
+	border-radius: 10px;
+	display: flex;
+	top: 60px;
+	flex-direction: row;
+	position: absolute;
+	right: 40px;
+}
+.userType{
+	padding: 25px;
+	border: 2px solid black;
+	border-radius: 10px;
+	display: flex;
+	top: 60px;
+	flex-direction: row;
+	position: absolute;
+	right: 40px;
+	font-weight: bold;
+	color: #008336;
+	font-size: 20px;
+}
 .centerText {
 	margin: 0 auto;
 	align-self: center;
